fixed text and navbar

--- a/blog.html
+++ b/blog.html
@@ -78,108 +78,121 @@
 
       <!-- Blog 1 -->
       <div class="card-register">
-        <h1 class="blog-title">Title Bla bla bla</h1>
+        <h1 class="blog-title">🦎 Welcoming Our Newest Resident: The Tokay Gecko! 🌿</h1>
         <h3 class="blog-date">Updated at: 20.02.2024</h3>
-        <div id="fb-root"></div>
-        <script>
-          (function (d, s, id) {
-            var js,
-              fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s);
-            js.id = id;
-            js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
-            fjs.parentNode.insertBefore(js, fjs);
-          })(document, "script", "facebook-jssdk");
-        </script>
+        <div class="shareBtn">
+          <div id="fb-root"></div>
+          <script>
+            (function (d, s, id) {
+              var js,
+                fjs = d.getElementsByTagName(s)[0];
+              if (d.getElementById(id)) return;
+              js = d.createElement(s);
+              js.id = id;
+              js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+              fjs.parentNode.insertBefore(js, fjs);
+            })(document, "script", "facebook-jssdk");
+          </script>
 
-        <!-- Your share button code -->
-        <div class="fb-share-button" data-href="https://missbehavior.github.io/Birbberry/blog.html" data-layout="button_count"></div>
-        <a href="https://twitter.com/intent/tweet?button_hashtag=Blog1&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false"
-          >Tweet #Blog1</a
-        >
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <!-- Your share button code -->
+          <div class="fb-share-button" data-href="https://missbehavior.github.io/Birbberry/blog.html" data-layout="button_count"></div>
+          <a href="https://twitter.com/intent/tweet?button_hashtag=Blog1&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false"
+            >Tweet #Blog1</a
+          >
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <button class="pinterestBtn" onclick="redirect()">Visit us on Pinterest <i class="fa fa-pinterest"></i></button>
+        </div>
         <img class="blog-img" src="pictures/blog1.jpg" width="600" height="400" alt="Image of a Gecko" />
 
         <p class="blog-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sunt pariatur odio eligendi eius recusandae dolores exercitationem commodi
-          rerum illo inventore quae repellat, aut earum rem? Doloribus, cum deleniti. Repudiandae! Lorem Lorem, ipsum dolor sit amet consectetur
-          adipisicing elit. Optio expedita nihil voluptas, facere suscipit nesciunt quas sint, commodi laborum explicabo debitis accusantium quaerat
-          corrupti nisi aut dicta fugiat placeat impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci impedit hic fuga eligendi
-          cum quae, dicta error nisi quas tenetur facere saepe aut ducimus, perferendis asperiores at qui amet? Minus. Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Fugit temporibus vero amet eligendi quos animi repellendus, perferendis aut deleniti saepe est? Porro eaque
-          sit delectus cupiditate ipsa aliquid magnam repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt saepe, amet quos
-          magnam necessitatibus ducimus commodi accusamus pariatur ut quaerat culpa ad. Facere labore officiis iure fugiat excepturi nulla fugit.
+          Exciting news from Birbberry! We're thrilled to introduce our latest addition: the vibrant and charismatic Tokay Gecko! Originating from
+          Southeast Asia, this gecko species boasts striking colors and a unique set of features that make it a captivating addition to our sanctuary.
+          Meet the Tokay Gecko: <br /><br />
+          🌈 Vibrant Appearance: Adorned with spots ranging from blue-gray to red-orange, the Tokay Gecko is a sight to behold! <br /><br />
+          🔊 Distinctive Vocalizations: Known for its loud and distinctive calls, the Tokay Gecko's vocal prowess adds a special charm to our shelter.
+          Caring for Our Tokay Gecko: <br /><br />
+          🏠 Optimal Habitat: Our gecko's enclosure is carefully designed to mimic its natural habitat, complete with hiding spots and climbing
+          branches. <br /><br />
+          🍴 Nutritious Diet: With a menu of crickets, mealworms, and other insects, our Tokay Gecko enjoys a balanced diet supplemented with
+          essential nutrients. <br /><br />
+          🌡️ Proper Environment: Maintaining ideal temperature and lighting ensures our gecko's health and well-being.
         </p>
       </div>
       <!-- Blog 2 -->
       <div class="card-register">
-        <h1 class="blog-title">Title Bla bla bla</h1>
-        <h3 class="blog-date">Updated at: 20.02.2024</h3>
-        <div id="fb-root"></div>
-        <script>
-          (function (d, s, id) {
-            var js,
-              fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s);
-            js.id = id;
-            js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
-            fjs.parentNode.insertBefore(js, fjs);
-          })(document, "script", "facebook-jssdk");
-        </script>
-        <!-- Your share button code -->
-        <div class="fb-share-button" data-href="http://127.0.0.1:5501/blog.html" data-layout="button_count"></div>
-        <a href="https://twitter.com/intent/tweet?button_hashtag=Blog2&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false"
-          >Tweet #Blog2</a
-        >
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <h1 class="blog-title">🦜 Welcoming the Charismatic Kakapo Parrot to Our Sanctuary! 🌿</h1>
+        <h3 class="blog-date">Updated at: 03.01.2024</h3>
+        <div class="shareBtn">
+          <div id="fb-root"></div>
+          <script>
+            (function (d, s, id) {
+              var js,
+                fjs = d.getElementsByTagName(s)[0];
+              if (d.getElementById(id)) return;
+              js = d.createElement(s);
+              js.id = id;
+              js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+              fjs.parentNode.insertBefore(js, fjs);
+            })(document, "script", "facebook-jssdk");
+          </script>
+          <!-- Your share button code -->
+          <div class="fb-share-button" data-href="http://127.0.0.1:5501/blog.html" data-layout="button_count"></div>
+          <a href="https://twitter.com/intent/tweet?button_hashtag=Blog2&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false"
+            >Tweet #Blog2</a
+          >
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <button class="pinterestBtn" onclick="redirect()">Visit us on Pinterest <i class="fa fa-pinterest"></i></button>
+        </div>
         <img class="blog-img" src="pictures/blog2.jpg" width="600" height="400" alt="Image of a Kakapo" />
 
         <p class="blog-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sunt pariatur odio eligendi eius recusandae dolores exercitationem commodi
-          rerum illo inventore quae repellat, aut earum rem? Doloribus, cum deleniti. Repudiandae! Lorem Lorem, ipsum dolor sit amet consectetur
-          adipisicing elit. Optio expedita nihil voluptas, facere suscipit nesciunt quas sint, commodi laborum explicabo debitis accusantium quaerat
-          corrupti nisi aut dicta fugiat placeat impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci impedit hic fuga eligendi
-          cum quae, dicta error nisi quas tenetur facere saepe aut ducimus, perferendis asperiores at qui amet? Minus. Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Fugit temporibus vero amet eligendi quos animi repellendus, perferendis aut deleniti saepe est? Porro eaque
-          sit delectus cupiditate ipsa aliquid magnam repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt saepe, amet quos
-          magnam necessitatibus ducimus commodi accusamus pariatur ut quaerat culpa ad. Facere labore officiis iure fugiat excepturi nulla fugit.
+          Nestled within the lush forests of New Zealand, a unique avian marvel thrives, captivating the hearts of those fortunate enough to encounter
+          it—the Kakapo Parrot. Join us as we delve into the fascinating world of this rare and charismatic bird, recently welcomed into our sanctuary
+          at Birbberry. Keeping Up with Kakapo:
+          <br /><br />
+          🏝️ Island Living: Our Kakapo Parrot enjoys the laid-back lifestyle of its native New Zealand, where it can strut its stuff and entertain the
+          masses.
+          <br /><br />
+          🍐 Gourmet Taste: When it comes to cuisine, this parrot is a connoisseur of fine delicacies, with a particular fondness for native fruits
+          like the delicious rimu berries.
+          <br /><br />
+          🌧️ Rainy Day Fun: Rainy weather? No problem! Our Kakapo Parrot thrives in the wet weather, proving that laughter is the best medicine—even
+          during a downpour!
         </p>
       </div>
       <!-- Blog 3 -->
       <div class="card-register">
-        <h1 class="blog-title">Title Bla bla bla</h1>
-        <h3 class="blog-date">Updated at: 20.02.2024</h3>
-        <div id="fb-root"></div>
-        <script>
-          (function (d, s, id) {
-            var js,
-              fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s);
-            js.id = id;
-            js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
-            fjs.parentNode.insertBefore(js, fjs);
-          })(document, "script", "facebook-jssdk");
-        </script>
-        <!-- Your share button code -->
-        <div class="fb-share-button" data-href="http://127.0.0.1:5501/blog.html" data-layout="button_count"></div>
-        <a href="https://twitter.com/intent/tweet?button_hashtag=Blog3&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false"
-          >Tweet #Blog3</a
-        >
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <h1 class="blog-title">🦜 Welcoming Our Newest Resident: The Monk Parakeet! 🌿</h1>
+        <h3 class="blog-date">Updated at: 19.12.2023</h3>
+        <div class="shareBtn">
+          <div id="fb-root"></div>
+          <script>
+            (function (d, s, id) {
+              var js,
+                fjs = d.getElementsByTagName(s)[0];
+              if (d.getElementById(id)) return;
+              js = d.createElement(s);
+              js.id = id;
+              js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+              fjs.parentNode.insertBefore(js, fjs);
+            })(document, "script", "facebook-jssdk");
+          </script>
+          <!-- Your share button code -->
+          <div class="fb-share-button" data-href="http://127.0.0.1:5501/blog.html" data-layout="button_count"></div>
+          <a href="https://twitter.com/intent/tweet?button_hashtag=Blog3&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false"
+            >Tweet #Blog3</a
+          >
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <button class="pinterestBtn" onclick="redirect()">Visit us on Pinterest <i class="fa fa-pinterest"></i></button>
+        </div>
         <img class="blog-img" src="pictures/blog3.webp" alt="Image of a Quacker" />
 
         <p class="blog-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sunt pariatur odio eligendi eius recusandae dolores exercitationem commodi
-          rerum illo inventore quae repellat, aut earum rem? Doloribus, cum deleniti. Repudiandae! Lorem Lorem, ipsum dolor sit amet consectetur
-          adipisicing elit. Optio expedita nihil voluptas, facere suscipit nesciunt quas sint, commodi laborum explicabo debitis accusantium quaerat
-          corrupti nisi aut dicta fugiat placeat impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci impedit hic fuga eligendi
-          cum quae, dicta error nisi quas tenetur facere saepe aut ducimus, perferendis asperiores at qui amet? Minus. Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Fugit temporibus vero amet eligendi quos animi repellendus, perferendis aut deleniti saepe est? Porro eaque
-          sit delectus cupiditate ipsa aliquid magnam repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt saepe, amet quos
-          magnam necessitatibus ducimus commodi accusamus pariatur ut quaerat culpa ad. Facere labore officiis iure fugiat excepturi nulla fugit.
+          Exciting news from Birbberry! We're thrilled to introduce our vibrant new addition, the Monk Parakeet, also known as the Quaker Parrot!
+          Originating from South America, this charming bird brings color and character to our sanctuary. 🌈 Meet the Monk Parakeet:<br /><br />
+          🏡 Adaptable Habitat: Our Quaker Parrot will enjoy a spacious aviary filled with perches and toys.<br /><br />
+          🍏 Gourmet Palate: From fresh fruits to seeds, we ensure our bird's diet is nutritious and varied.<br /><br />
+          🤝 Social Butterfly: With its sociable nature, our Monk Parakeet enjoys interaction with both birds and humans alike.<br /><br />
         </p>
       </div>
     </main>
