--- a/services.html
+++ b/services.html
@@ -25,13 +25,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"
-          ><img
-            id="logoimg"
-            src="pictures/logo.png"
-            alt="BirbBerry logo"
-            title="BirbBerry" /></a
-        ><br />
+        <a href="index.html"><img id="logoimg" src="pictures/logo.png" alt="BirbBerry logo" title="BirbBerry" /></a><br />
         <a href="index.html" class="logo-link">BirbBerry</a>
       </div>
       <br />
@@ -43,24 +37,16 @@
         <a href="login.html">Log in</a>
         <a href="register.html">Register</a>
         <a href="game.html">Game</a>
+        <a href="blog.html">Blog</a>
+        <a href="faq.html">FAQ</a>
         <!-- <a href="/schema.html">Schema</a> -->
         <form action="" class="search-form">
           <input type="text" placeholder="Search" class="search-input" />
           <button type="submit" class="search-btn">
-            <img
-              class="search-img"
-              src="pictures/searchIcon.svg"
-              alt=""
-              width="27"
-              height="27"
-            />
+            <img class="search-img" src="pictures/searchIcon.svg" alt="" width="27" height="27" />
           </button>
         </form>
-        <a
-          href="javascript:void(0);"
-          class="icon"
-          onclick="hamburgerMenuClick()"
-        >
+        <a href="javascript:void(0);" class="icon" onclick="hamburgerMenuClick()">
           <i class="fa fa-bars"></i>
         </a>
         <a id="tester" href="#about"><i class="fa fa-cog"></i></a>
@@ -72,13 +58,7 @@
         <div class="modal-content">
           <div class="card-text">
             Current Mode:
-            <button
-              type="button"
-              data-theme-toggle
-              aria-label="Change to light theme"
-            >
-              Change to light theme
-            </button>
+            <button type="button" data-theme-toggle aria-label="Change to light theme">Change to light theme</button>
             <br />
             <label for="header-size">Header font size</label>
             <select name="header-size" id="header-size">
@@ -100,130 +80,77 @@
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="card">
                   <a target="_blank" href="pictures/adopt1.jpg">
-                    <img
-                      src="pictures/adopt1.jpg"
-                      alt="Forest"
-                      class="about-img"
-                    />
+                    <img src="pictures/adopt1.jpg" alt="Forest" class="about-img" />
                   </a>
                   <div class="card-text">
                     <h1>Why Adopt from Iowa Parrot Rescue?</h1>
                     <br /><br />
-                    Welcome to Iowa Parrot Rescue, where feathered friends find
-                    their forever homes! Our adoption service is designed to
-                    match loving families with parrots in need of a caring and
-                    permanent home. By choosing to adopt from Iowa Parrot
-                    Rescue, you not only open your heart and home to a wonderful
-                    companion but also contribute to the well-being of these
-                    incredible birds.
+                    Welcome to Iowa Parrot Rescue, where feathered friends find their forever homes! Our adoption service is designed to match loving
+                    families with parrots in need of a caring and permanent home. By choosing to adopt from Iowa Parrot Rescue, you not only open your
+                    heart and home to a wonderful companion but also contribute to the well-being of these incredible birds.
                     <br />
                     <br />
                     <b>Why Adopt from Iowa Parrot Rescue?</b>
                     <br /><br />
-                    <b>Compassionate Care: </b>Our parrots receive expert care
-                    and attention from dedicated staff and volunteers. We
-                    prioritize the physical and emotional well-being of each
-                    bird, ensuring they are ready for their next chapter in a
-                    loving home. <br /><br />
-                    <b>Variety of Parrots: </b>Whether you're looking for a
-                    talkative African Grey, a playful Conure, or a colorful
-                    Macaw, Iowa Parrot Rescue offers a diverse selection of
-                    parrot species. Explore our adoption gallery to meet the
-                    charming characters awaiting your visit.<br /><br />
-                    <b>Adoption Process: </b>Our adoption process is designed to
-                    make sure both you and the parrot are a perfect match. We
-                    conduct thorough screenings and provide guidance on parrot
-                    care to ensure a smooth transition for your new feathered
-                    friend.<br /><br />
+                    <b>Compassionate Care: </b>Our parrots receive expert care and attention from dedicated staff and volunteers. We prioritize the
+                    physical and emotional well-being of each bird, ensuring they are ready for their next chapter in a loving home. <br /><br />
+                    <b>Variety of Parrots: </b>Whether you're looking for a talkative African Grey, a playful Conure, or a colorful Macaw, Iowa Parrot
+                    Rescue offers a diverse selection of parrot species. Explore our adoption gallery to meet the charming characters awaiting your
+                    visit.<br /><br />
+                    <b>Adoption Process: </b>Our adoption process is designed to make sure both you and the parrot are a perfect match. We conduct
+                    thorough screenings and provide guidance on parrot care to ensure a smooth transition for your new feathered friend.<br /><br />
                   </div>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="card">
                   <a target="_blank" href="pictures/adopt2.jpg">
-                    <img
-                      src="pictures/adopt2.jpg"
-                      alt="Forest"
-                      class="about-img"
-                    />
+                    <img src="pictures/adopt2.jpg" alt="Forest" class="about-img" />
                   </a>
                   <div class="card-text">
                     <h1>How to Adopt?</h1>
                     <br /><br />
-                    <b>Visit our Rescue Center:</b> Schedule a visit to Iowa
-                    Parrot Rescue to meet our parrots in person. Spend time
-                    interacting with them to discover the unique personality
-                    that might steal your heart. <br /><br />
-                    <b>Adoption Counseling:</b> Our experienced staff will guide
-                    you through the adoption process, helping you choose the
-                    parrot that fits your lifestyle and preferences. We are here
-                    to answer any questions and provide valuable insights into
-                    parrot care. Home Visit: As part of our commitment to the
-                    well-being of our parrots, we may conduct a home visit to
-                    ensure a safe and suitable environment for your new
-                    feathered companion. <br /><br />
-                    <b>Home Visit:</b> As part of our commitment to the
-                    well-being of our parrots, we may conduct a home visit to
-                    ensure a safe and suitable environment for your new
-                    feathered companion. <br /><br />
-                    <b>Adoption Day:</b> Once approved, you'll have the joy of
-                    welcoming your new parrot into your home. We provide
-                    adoption packages with essential information, and our team
-                    is available for ongoing support as you and your parrot
-                    build a lasting bond. <br /><br />
-                    By choosing Iowa Parrot Rescue for adoption, you are not
-                    just gaining a feathered friend; you are becoming part of a
-                    community dedicated to the welfare of parrots. Join us in
-                    providing loving homes for these intelligent and charismatic
-                    birds.<br /><br />
-                    Ready to embark on a new adventure with a parrot companion?
-                    Contact Iowa Parrot Rescue today and start the journey
-                    towards a lifelong friendship!<br /><br />
+                    <b>Visit our Rescue Center:</b> Schedule a visit to Iowa Parrot Rescue to meet our parrots in person. Spend time interacting with
+                    them to discover the unique personality that might steal your heart. <br /><br />
+                    <b>Adoption Counseling:</b> Our experienced staff will guide you through the adoption process, helping you choose the parrot that
+                    fits your lifestyle and preferences. We are here to answer any questions and provide valuable insights into parrot care. Home
+                    Visit: As part of our commitment to the well-being of our parrots, we may conduct a home visit to ensure a safe and suitable
+                    environment for your new feathered companion. <br /><br />
+                    <b>Home Visit:</b> As part of our commitment to the well-being of our parrots, we may conduct a home visit to ensure a safe and
+                    suitable environment for your new feathered companion. <br /><br />
+                    <b>Adoption Day:</b> Once approved, you'll have the joy of welcoming your new parrot into your home. We provide adoption packages
+                    with essential information, and our team is available for ongoing support as you and your parrot build a lasting bond.
+                    <br /><br />
+                    By choosing Iowa Parrot Rescue for adoption, you are not just gaining a feathered friend; you are becoming part of a community
+                    dedicated to the welfare of parrots. Join us in providing loving homes for these intelligent and charismatic birds.<br /><br />
+                    Ready to embark on a new adventure with a parrot companion? Contact Iowa Parrot Rescue today and start the journey towards a
+                    lifelong friendship!<br /><br />
                   </div>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="card">
                   <a target="_blank" href="pictures/visit.jpg">
-                    <img
-                      src="pictures/visit.jpg"
-                      alt="Forest"
-                      class="about-img"
-                    />
+                    <img src="pictures/visit.jpg" alt="Forest" class="about-img" />
                   </a>
                   <div class="card-text">
                     <h1>Visit the Parrots</h1>
                     <br /><br />
-                    Discover the enchanting world of parrots by visiting Iowa
-                    Parrot Rescue! Our "Visit the Parrots" service invites you
-                    to experience the joy of interacting with these intelligent
-                    and charismatic birds in a safe and welcoming environment.
-                    Whether you're a seasoned parrot enthusiast or a curious
-                    first-time visitor, our rescue center offers a unique
-                    opportunity to connect with our feathered residents.<br /><br />
+                    Discover the enchanting world of parrots by visiting Iowa Parrot Rescue! Our "Visit the Parrots" service invites you to experience
+                    the joy of interacting with these intelligent and charismatic birds in a safe and welcoming environment. Whether you're a seasoned
+                    parrot enthusiast or a curious first-time visitor, our rescue center offers a unique opportunity to connect with our feathered
+                    residents.<br /><br />
                     <b>What to Expect During Your Visit:</b><br /><br />
-                    <b>Educational Experience:</b> Immerse yourself in the
-                    fascinating world of parrots as our knowledgeable staff
-                    provides insights into different species, their behaviors,
-                    and the importance of conservation efforts. Learn about the
-                    unique characteristics that make each parrot special.
-                    <b>Interactive Sessions:</b> Get up close and personal with
-                    our resident parrots during interactive sessions. Enjoy the
-                    thrill of feeding, playing, and communicating with these
-                    charming birds, fostering a deeper appreciation for their
-                    individual personalities. <br /><br />
-                    <b>Guided Tours:</b> Take a guided tour of our rescue
-                    center, where you'll have the chance to observe the various
-                    habitats, enrichment activities, and learn about our
-                    commitment to providing the best care for our parrots. Our
-                    team will be on hand to answer any questions and share
-                    heartwarming stories about the birds in our care.
-                    <br /><br />
-                    <b>Photo Opportunities:</b> Capture unforgettable moments
-                    with our vibrant and colorful parrots. Share your experience
-                    with friends and family by taking photos with our feathered
-                    friends, creating lasting memories of your visit.
-                    <br /><br />
+                    <b>Educational Experience:</b> Immerse yourself in the fascinating world of parrots as our knowledgeable staff provides insights
+                    into different species, their behaviors, and the importance of conservation efforts. Learn about the unique characteristics that
+                    make each parrot special. <b>Interactive Sessions:</b> Get up close and personal with our resident parrots during interactive
+                    sessions. Enjoy the thrill of feeding, playing, and communicating with these charming birds, fostering a deeper appreciation for
+                    their individual personalities. <br /><br />
+                    <b>Guided Tours:</b> Take a guided tour of our rescue center, where you'll have the chance to observe the various habitats,
+                    enrichment activities, and learn about our commitment to providing the best care for our parrots. Our team will be on hand to
+                    answer any questions and share heartwarming stories about the birds in our care. <br /><br />
+                    <b>Photo Opportunities:</b> Capture unforgettable moments with our vibrant and colorful parrots. Share your experience with
+                    friends and family by taking photos with our feathered friends, creating lasting memories of your visit. <br /><br />
                   </div>
                 </div>
               </div>
@@ -233,11 +160,7 @@
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
             <aside class="sidebar-ads flex-md-column flex-sm-row">
               <div class="ads">
-                <img
-                  src="pictures/prafulpashte-foodbanner.gif"
-                  alt=""
-                  class="ads-img"
-                />
+                <img src="pictures/prafulpashte-foodbanner.gif" alt="" class="ads-img" />
               </div>
               <div class="ads">
                 <img src="pictures/foodnyamad.gif" class="ads-img" alt="" />
