--- a/faq.html
+++ b/faq.html
@@ -86,7 +86,7 @@
               aria-expanded="true"
               aria-controls="collapseOne"
             >
-              What species of birds can be found at the sanctuary?
+              <b>What species of birds can be found at the sanctuary?</b>
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -106,7 +106,7 @@
               aria-expanded="false"
               aria-controls="collapseTwo"
             >
-              Are there any rare or endangered bird species housed in the sanctuary?
+              <b>Are there any rare or endangered bird species housed in the sanctuary?</b>
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -126,7 +126,7 @@
               aria-expanded="false"
               aria-controls="collapseThree"
             >
-              Can visitors interact with the birds or are they strictly for observation?
+              <b>Can visitors interact with the birds or are they strictly for observation?</b>
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -146,8 +146,10 @@
               aria-expanded="false"
               aria-controls="collapseFour"
             >
-              Can you tell us more about the geckos in the sanctuary? How do they coexist with the bird population, and what role do they play in the
-              ecosystem of the sanctuary?
+              <b
+                >Can you tell us more about the geckos in the sanctuary? How do they coexist with the bird population, and what role do they play in
+                the ecosystem of the sanctuary?</b
+              >
             </button>
           </h2>
           <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
@@ -168,7 +170,7 @@
               aria-expanded="false"
               aria-controls="collapseFive"
             >
-              Is photography permitted within the sanctuary, and are there any restrictions on capturing images of the birds?
+              <b>Is photography permitted within the sanctuary, and are there any restrictions on capturing images of the birds?</b>
             </button>
           </h2>
           <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
