--- a/register.html
+++ b/register.html
@@ -24,13 +24,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"
-          ><img
-            id="logoimg"
-            src="pictures/logo.png"
-            alt="BirbBerry logo"
-            title="BirbBerry" /></a
-        ><br />
+        <a href="index.html"><img id="logoimg" src="pictures/logo.png" alt="BirbBerry logo" title="BirbBerry" /></a><br />
         <a href="index.html" class="logo-link">BirbBerry</a>
       </div>
       <br />
@@ -42,24 +36,16 @@
         <a href="login.html">Log in</a>
         <a href="register.html" class="active">Register</a>
         <a href="game.html">Game</a>
+        <a href="blog.html">Blog</a>
+        <a href="faq.html">FAQ</a>
         <!-- <a href="/schema.html">Schema</a> -->
         <form action="" class="search-form">
           <input type="text" placeholder="Search" class="search-input" />
           <button type="submit" class="search-btn">
-            <img
-              class="search-img"
-              src="pictures/searchIcon.svg"
-              alt=""
-              width="27"
-              height="27"
-            />
+            <img class="search-img" src="pictures/searchIcon.svg" alt="" width="27" height="27" />
           </button>
         </form>
-        <a
-          href="javascript:void(0);"
-          class="icon"
-          onclick="hamburgerMenuClick()"
-        >
+        <a href="javascript:void(0);" class="icon" onclick="hamburgerMenuClick()">
           <i class="fa fa-bars"></i>
         </a>
         <a id="tester" href="#about"><i class="fa fa-cog"></i></a>
@@ -71,13 +57,7 @@
         <div class="modal-content">
           <div class="card-text">
             Current Mode:
-            <button
-              type="button"
-              data-theme-toggle
-              aria-label="Change to light theme"
-            >
-              Change to light theme
-            </button>
+            <button type="button" data-theme-toggle aria-label="Change to light theme">Change to light theme</button>
             <br />
             <label for="header-size">Header font size</label>
             <select name="header-size" id="header-size">
@@ -98,14 +78,7 @@
             <label for="fEmail">Email</label>
             <input type="email" placeholder="Email" name="fEmail" required />
             <label for="fUsername">Username</label>
-            <input
-              type="text"
-              placeholder="Username"
-              name="fUsername"
-              pattern="^.{3,}"
-              title="Must contain at least 3 characters"
-              required
-            />
+            <input type="text" placeholder="Username" name="fUsername" pattern="^.{3,}" title="Must contain at least 3 characters" required />
             <label for="fPassword">Password</label>
             <input
               type="password"
@@ -115,9 +88,7 @@
               title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
               required
             />
-            <label for="fCheckbox"
-              >Subscribe (subscribe to our newsletters)</label
-            >
+            <label for="fCheckbox">Subscribe (subscribe to our newsletters)</label>
             <input type="checkbox" name="fCheckbox" id="checkbox" />
             <button class="submitBtn" type="submit">Register</button>
           </form>
@@ -232,9 +203,7 @@
         } else {
           var re = /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}$/;
           if (!re.test(form.fPassword.value)) {
-            alert(
-              "Error: Password must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-            );
+            alert("Error: Password must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters");
             form.fPassword.focus();
             return false;
           }
